# JD-Analyzer

agent-service/: .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yml  pyproject.toml
agent-service/backend/: app.py
agent-service/backend/agents/: graph.py  jd_analysis_agent.py  match_and_score_agent.py  recommendation_agent.py  resume_parsing_agent.py  state.py
agent-service/backend/config/: lifespan.py  main.py
agent-service/backend/controllers/v1/: agents.py
agent-service/backend/llm/: gemini.py
agent-service/backend/models/: Analysis.py
agent-service/backend/routes/: index.py
agent-service/backend/routes/v1/: agent.py  index.py
agent-service/backend/utils/: jwt.py  reuseable_functions.py
frontend/: .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/config/: index.ts
user-service/: .prettierrc  Dockerfile.dev  README.md  docker-compose.dev.yml  local.env  package-lock.json  package.json  server.ts  tsconfig.json
user-service/config/: index.ts
user-service/constants/: enums.ts  regex.ts
user-service/controllers/: index.ts
user-service/database/: connection.ts
user-service/models/: EmailTemplate.ts  Security.ts  Token.ts  User.ts  index.ts
user-service/private/: auth_private_signer.pem  auth_public_key.pem
user-service/routes/: index.ts
user-service/security/: auth.security.ts  crypto.ts  passport.ts  security.ts
user-service/types/: auth.d.ts
user-service/utils/: pagination.ts  reUseableFunctions.ts  yupToFormErrors.ts
(+38 files in other folders)
